feat(web): logger improvements
 - render reverse logs
 - add close button
 - disable select in preferences footer
 - increese activity width
 - use monospace font-family

--- a/src/styles/modals.scss
+++ b/src/styles/modals.scss
@@ -385,6 +385,8 @@
               cursor: default;
               font-size: 12px;
               color: rgba(black, .4);
+
+              @include no-select();
             }
           }
         }
