--- a/src/styles/icons.scss
+++ b/src/styles/icons.scss
@@ -33,3 +33,33 @@
     fill: rgba(0,0,0,.25);
   }
 }
+
+.icon-favorite:before {
+  font-family: 'Material Icons';
+  content: 'favorite';
+}
+
+.icon-done:before {
+  font-family: 'Material Icons';
+  content: 'done';
+}
+
+.icon-done_all:before {
+  font-family: 'Material Icons';
+  content: 'done_all';
+}
+
+.icon-access_time:before {
+  font-family: 'Material Icons';
+  content: 'access_time';
+}
+
+.icon-report_problem:before {
+  font-family: 'Material Icons';
+  content: 'report_problem';
+}
+
+.icon-check:before {
+  font-family: 'Material Icons';
+  content: 'check';
+}
