web(fix): move svg icons to react component

--- a/src/styles/sidebar.scss
+++ b/src/styles/sidebar.scss
@@ -50,6 +50,10 @@
       }
     }
 
+    &__twitter {
+      margin-left: -34px;
+    }
+
     .dropdown--opened {
       .dropdown__button {
         transition: transform $default-transition-duration $default-transition-timing;
