chore+feat(web): add tooltip component, and add tooltips to sidebar group title icons.

--- a/src/styles/sidebar.scss
+++ b/src/styles/sidebar.scss
@@ -124,7 +124,8 @@
 
       &__icon {
         font-size: 22px;
-        line-height: 32px;
+        line-height: 22px;
+        margin-top: 5px;
 
         cursor: pointer;
         transition: 200ms;
