--- a/src/styles/emoji.scss
+++ b/src/styles/emoji.scss
@@ -75,6 +75,77 @@ $stem-size: $default-stem-size;
       @include stem();
     }
   }
+  &--opened {
+    .emoji-dropdown__wrapper {
+      display: block;
+    }
+  }
+
+  .emoji-opener {
+    position: absolute;
+    top: 6px;
+    right: 6px;
+
+    cursor: pointer;
+    transition: 150ms;
+    transform: scale(.9);
+
+    opacity: .8;
+    color: $greyish;
+
+    @include no-select();
+    &--active,
+    &:hover {
+      transform: scale(1);
+
+      opacity: 1;
+      color: $dark-sky-blue;
+    }
+
+    &--with-dot {
+      &:after {
+        position: absolute;
+        top: 0;
+        right: 1px;
+
+        width: 8px;
+        height: 8px;
+
+        content: '';
+
+        border-radius: 50%;
+        background-color: $coral;
+      }
+    }
+  }
+
+  &__footer {
+    display: flex;
+    flex-direction: row;
+
+    box-shadow: inset 0 1px 0 0 rgba(black, .1);
+
+    align-content: center;
+    justify-content: center;
+    &__tab {
+      font-size: 13px;
+      font-weight: 500;
+      line-height: 32px;
+
+      cursor: pointer;
+      text-align: center;
+      text-transform: uppercase;
+
+      flex: 1 1 auto;
+      &--active {
+        color: $dark-sky-blue;
+        box-shadow: inset 0 2px 0 0 $dark-sky-blue;
+      }
+    }
+  }
+}
+
+.emojis {
   &__header {
     font-size: 12px;
     line-height: 20px;
@@ -193,46 +264,28 @@ $stem-size: $default-stem-size;
       height: 28px;
     }
   }
-  &--opened {
-    .emoji-dropdown__wrapper {
-      display: block;
-    }
-  }
+}
 
-  .emoji-opener {
-    position: absolute;
-    top: 6px;
-    right: 6px;
+.stickers {
+  position: relative;
+  z-index: 16;
 
-    cursor: pointer;
-    transition: 150ms;
-    transform: scale(.9);
+  overflow-x: hidden;
+  overflow-y: auto;
 
-    opacity: .8;
-    color: $greyish;
+  box-sizing: border-box;
+  width: $emoji-dropdown-width;
+  height: 200px;
+  .sticker {
+    box-sizing: border-box;
+    padding: 6px;
+
+    cursor: pointer !important;
 
     @include no-select();
-    &--active,
     &:hover {
-      transform: scale(1);
-
-      opacity: 1;
-      color: $dark-sky-blue;
-    }
-
-    &--with-dot {
-      &:after {
-        position: absolute;
-        top: 0;
-        right: 1px;
-
-        width: 8px;
-        height: 8px;
-
-        content: '';
-
-        border-radius: 50%;
-        background-color: $coral;
+      img {
+        transform: scale(1.2);
       }
     }
   }
