--- a/src/styles/forms.scss
+++ b/src/styles/forms.scss
@@ -259,7 +259,8 @@
       border: none;
       outline: none;
       background-color: transparent;
-      box-shadow: 0 1px 0 0 rgba(black, .3);
+      color: white;
+      box-shadow: 0 1px 0 0 rgba(black, .15);
     }
     .error {
       font-size: 14px;
@@ -301,7 +302,7 @@
       }
     }
     &--disabled {
-      border-bottom: 1px dotted rgba(black, .5);
+      border-bottom: 1px dotted rgba(black, .3);
 
       label {
         color: rgba(black, .5);
@@ -309,12 +310,15 @@
         @include focused-label();
       }
       input {
-        box-shadow: none;
+        box-shadow: none !important;
 
         @include no-select();
       }
     }
     &--with-error {
+      label {
+        color: $coral;
+      }
       input {
         box-shadow: 0 2px 0 0 $coral !important;
       }
