--- a/src/styles/login.scss
+++ b/src/styles/login.scss
@@ -162,7 +162,9 @@
         input {
           box-shadow: 0 1px 0 0 rgba(white, .15);
         }
-
+        &--disabled {
+          border-bottom: 1px dotted rgba(white, .1);
+        }
         &--focus {
           label {
             color: rgba(white, .8) !important;
