feat+fix(web): fix toolbar collapsing, add new chat flex layout

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -41,6 +41,7 @@
 @import 'sticker';
 @import 'common/contact';
 @import 'components/message_art/index';
+@import 'chat/layout';
 
 @import 'responsive';
 
