--- a/src/styles/toolbar.scss
+++ b/src/styles/toolbar.scss
@@ -16,9 +16,11 @@
   color: $toolbar-text-color;
   box-shadow: inset 0 -1px 0 0 rgba(0, 0, 0, .04);
 
+  flex: 0 0 auto;;
+
   &__calling {
-    background-color: $call-background;
     color: $call-title-color;
+    background-color: $call-background;
     box-shadow: none;
 
     .toolbar__peer__message {
