--- a/src/styles/call.scss
+++ b/src/styles/call.scss
@@ -30,7 +30,6 @@
 
   &__draggable {
     width: 240px;
-    height: 240px;
     z-index: 1000;
     background-color: $call-background;
     color: $call-title-color;
@@ -63,6 +62,9 @@
     .avatar {
       z-index: 15;
       box-shadow: 0 0 0 1px white;
+      &--without-shadow {
+        box-shadow: inset 0 0 0 1px white !important;
+      }
     }
     &__rings {
       & > div {
@@ -137,7 +139,7 @@
         &:hover {
           color: $call-button-color-hover
         }
-        
+
         &[disabled] {
           color: rgba(white, .2);
         }
