feat(web): add messages searching

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -19,6 +19,7 @@
 @import 'sidebar';
 @import 'toolbar';
 @import 'messages';
+@import 'search/index';
 @import 'status';
 @import 'compose';
 @import 'activity';
