fix(web): update search styles paths

--- a/src/styles/search/index.scss
+++ b/src/styles/search/index.scss
@@ -1,4 +1,8 @@
-@import 'mixins';
-@import 'search';
-@import 'toolbar';
-@import 'sidebar';
+/*
+ * Copyright (C) 2015 Actor LLC. <https://actor.im>
+ */
+
+@import './mixins';
+@import './recent';
+@import './search';
+@import './toolbar';
