--- a/src/styles/search/mixins.scss
+++ b/src/styles/search/mixins.scss
@@ -1,3 +1,7 @@
+/*
+ * Copyright (C) 2015 Actor LLC. <https://actor.im>
+ */
+
 @mixin focused() {
   color: rgba(black, .6);
   background-color: white;
