fix(web): fix search block z-index, fix material input color;

--- a/src/styles/forms.scss
+++ b/src/styles/forms.scss
@@ -259,7 +259,7 @@
       border: none;
       outline: none;
       background-color: transparent;
-      color: white;
+      // color: white;
       box-shadow: 0 1px 0 0 rgba(black, .15);
     }
     .error {
