--- a/src/styles/login.scss
+++ b/src/styles/login.scss
@@ -161,6 +161,7 @@
         }
         input {
           box-shadow: 0 1px 0 0 rgba(white, .15);
+          color: white;
         }
         &--disabled {
           border-bottom: 1px dotted rgba(white, .1);
