wip(web): add fullscreen avatar crop modal

--- a/src/styles/avatar.scss
+++ b/src/styles/avatar.scss
@@ -86,7 +86,7 @@
     .avatar__placeholder {
       font-size: 12px;
       font-weight: 500;
-      line-height: $avatar-tiny-size - 2px;
+      line-height: $avatar-tiny-size;
 
       width: $avatar-tiny-size - 2px;
       height: $avatar-tiny-size - 2px;
