fix(web): add better scroller in chat
 - lock scroll while exploiring chat history
 - handle resizes
 - fix incorrect scroll position when select another peer

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -18,6 +18,7 @@
 @import 'login';
 @import 'sidebar';
 @import 'toolbar';
+
 @import 'messages';
 @import 'search/index';
 @import 'status';
@@ -39,7 +40,7 @@
 @import 'call';
 @import 'tooltip';
 @import 'sticker';
-@import 'common/contact';
+@import 'components/common/index';
 @import 'components/message_art/index';
 @import 'chat/layout';
 
