fix(web): stick messages to bottom, fix disabled dialog footer styles

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -42,7 +42,7 @@
 @import 'sticker';
 @import 'components/common/index';
 @import 'components/message_art/index';
-@import 'chat/layout';
+@import 'chat/index';
 
 @import 'responsive';
 
