--- a/src/styles/messages.scss
+++ b/src/styles/messages.scss
@@ -645,6 +645,7 @@ $sticker-max-size: 180px;
     samp {
       margin: 0 0 7px;
       overflow: auto;
+      white-space: pre-wrap;
     }
 
     .emoji-outer {
