fix(web): fix mention highlight classname and add highlighting styles

--- a/src/styles/messages.scss
+++ b/src/styles/messages.scss
@@ -147,10 +147,6 @@ $sticker-max-size: 180px;
     }
   }
 
-  &__mention {
-    font-weight: 500;
-  }
-
   &__timestamp {
     font-size: 12px;
 
@@ -1110,6 +1106,12 @@ $sticker-max-size: 180px;
         display: block;
       }
     }
+  }
+
+  &__mention {
+    background-color: rgb(255, 243, 184);
+    border-radius: 2px;
+    padding: 2px 1px;
   }
 }
 
