--- a/src/styles/chat/_index.scss
+++ b/src/styles/chat/_index.scss
@@ -1,2 +1,40 @@
-@import "layout";
-@import "footer"
+$chat-min-width: 300px;
+$chat-footer-height: 100px;
+
+.chat {
+  display: flex;
+  flex-direction: column;
+
+  min-width: $chat-min-width;
+
+  flex: 1 1 auto;
+  justify-content: flex-end;
+}
+
+.chat__messages {
+  .message {
+    min-height: min-content;
+  }
+}
+
+.chat__footer {
+  flex: 0 0 auto;
+
+  &--disabled {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    font-size: 18px;
+    height: 90px;
+    color: #ccc;
+  }
+
+  &--clickable {
+    cursor: pointer;
+    color: $dark-sky-blue;
+    :hover {
+      color: darken($dark-sky-blue, 10%);
+    }
+  }
+}
