fix(web): make mention background color lighter

--- a/src/styles/messages.scss
+++ b/src/styles/messages.scss
@@ -1108,7 +1108,7 @@ $sticker-max-size: 180px;
   }
 
   &__mention {
-    background-color: #FBF5D6;
+    background-color: #FFFBE9;
     border-radius: 2px;
     padding: 2px 1px;
   }
