refactor(web): update modal markup

--- a/src/styles/modals/_index.scss
+++ b/src/styles/modals/_index.scss
@@ -2,7 +2,9 @@
  * Copyright (C) 2016 Actor LLC. <https://actor.im>
  */
 
-@import "layout";
-@import "modal";
+ @import "layout";
+ @import "modal";
+ @import "close_button";
+
 @import "profile";
 @import "crop";
