wip+refactor(web): add transfer search element styles, remove all modals from sidebar header component to modal wrapper, refactor create group modal and store, add default cursor to disabled buttons

--- a/src/styles/modals/_layout.scss
+++ b/src/styles/modals/_layout.scss
@@ -23,12 +23,9 @@
   }
 
   &__header,
+  &__body,
   &__footer {
     padding: $modal-padding;
-  }
-
-  &__body {
-    padding: 0 $modal-padding;
   }
 
   &--fullscreen {
