--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -113,6 +113,7 @@ $modal-backdrop-color: rgba(0, 0, 0, .6);
 $modal-padding: 18px;
 $modal-border-raidus: 4px;
 $modal-header-height: 60px;
+$modal-header-icon-color: rgba(black, .4);
 $modal-text-color: rgb(77, 77, 77);
 $modal-text-light-color:  rgb(101, 101, 101);
 
