wip+refactor(web): refactor preferences store with store, actions and included component.

--- a/src/styles/modals/_index.scss
+++ b/src/styles/modals/_index.scss
@@ -2,9 +2,10 @@
  * Copyright (C) 2016 Actor LLC. <https://actor.im>
  */
 
- @import "layout";
- @import "modal";
- @import "close-button";
+@import "layout";
+@import "modal";
+@import "close-button";
+@import 'picture-changer';
 
 @import "profile";
 @import "crop";
@@ -12,3 +13,4 @@
 @import 'create-group';
 @import 'edit-group';
 @import 'add-contact';
+@import 'preferences';
