wip+refactor(web): refactor invite and invite by link modals, fix styles

--- a/src/styles/modals/_index.scss
+++ b/src/styles/modals/_index.scss
@@ -2,16 +2,18 @@
  * Copyright (C) 2016 Actor LLC. <https://actor.im>
  */
 
-@import "layout";
-@import "modal";
-@import "close-button";
+@import 'layout';
+@import 'modal';
+@import 'close-button';
 @import 'picture-changer';
 
-@import "profile";
-@import "crop";
+@import 'profile';
+@import 'crop';
+// @import "groups";
 
 @import 'create-group';
 @import 'edit-group';
 @import 'add-contact';
 @import 'preferences';
 @import 'quick-search';
+@import 'invite';
